--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,78 @@
-<!DOCTYPE html><html class="no-js" lang="es"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI"><meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End"><title>Joshua Torres - Desarrollador Front End</title><link rel="shortcut icon" href="img/favicon.ico"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300, 400,700"><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:700"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css"><link rel="stylesheet" href="css/styles.css"><!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]--></head><body class="cuerpo"><!--[if lt IE 10]><p class="browserupgrade">Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo a(href='http://browsehappy.com/', style='color: yellow;') strong AQUÍ para mejorar tu experiencia y seguridad.</p><![endif]--><header><section class="escalar" id="saludo"><p class="hola">¡Hola!</p><h1>Soy<span class="bold">Joshua Torres</span></h1><h2>Desarrollador Front End</h2></section></header><section id="main-section"><section id="cont-boxes"><a href="http://seguristore.cl/" target="_blank"><figure><img src="img/15.jpg" alt="Seguristore" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="http://physiolift-avene.cl/" target="_blank"><figure><img src="img/14.jpg" alt="Physiolift" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="trabajos/felizconmiredcompra/" target="_blank"><figure><img src="img/13.jpg" alt="Feliz Red Compra Landing" width="340" height="300"><div><span>Ver Trabajos</span></div></figure></a><a href="trabajos/mjo/" target="_blank"><figure><img src="img/12.jpg" alt="Manuel Jose Osandon Landing" width="340" height="300"><div><span>Ver Trabajos</span></div></figure></a><a href="trabajos/kenwood/" target="_blank"><figure><img src="img/11.jpg" alt="Kenwood Landing" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="trabajos/fdv/" target="_blank"><figure><img src="img/10.jpg" alt="FDV" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="trabajos/umayor/repo/" target="_blank"><figure><img src="img/1.jpg" alt="UMayor" width="340" height="300"><div><span>Ver Trabajos</span></div></figure></a><a href="trabajos/umayor/lgenerica/" target="_blank"><figure><img src="img/2.jpg" alt="Landing Generica" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="trabajos/finning" target="_blank"><figure><img src="img/3.jpg" alt="Finning" width="340" height="300"><div><span>Ver Trabajos</span></div></figure></a><a href="trabajos/marsol/" target="_blank"><figure><img src="img/4.jpg" alt="Marsol" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="trabajos/holos/" target="_blank"><figure><img src="img/5.jpg" alt="Holos" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="trabajos/tdf/" target="_blank"><figure><img src="img/6.jpg" alt="TDF" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="trabajos/entel/" target="_blank"><figure><img src="img/7.jpg" alt="Entel" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="trabajos/hf/" target="_blank"><figure><img src="img/8.jpg" alt="HF" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a><a href="trabajos/apicola/" target="_blank"><figure><img src="img/9.jpg" alt="Apicola Santa Adriana" width="340" height="300"><div><span>Ver Trabajo</span></div></figure></a></section></section><footer><address><a href="mailto:hola@joshua.cl">hola@joshua.cl</a><span>hola@joshua.cl</span></address></footer><script>// (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-// (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-// m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-// })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-// ga('create', 'UA-74295870-1', 'auto');
-// ga('send', 'pageview');</script></body></html>
+<!DOCTYPE html>
+<html class="no-js" lang="es">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI">
+    <meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End">
+    <title>Joshua Torres - Desarrollador Front End</title>
+    <link rel="shortcut icon" href="img/favicon.ico?v=2">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:700">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
+    <link rel="stylesheet" href="css/styles.css"><!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+  </head>
+  <body class="body"><!--[if lt IE 10]>
+    <p class="browserupgrade">Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo<strong><a href="http://browsehappy.com/"> AQUÍ</a></strong> para mejorar tu experiencia y seguridad.</p><![endif]-->
+    <header class="header">
+      <section class="saludo">
+        <p class="saludo__hola bubble"><span>¡Hola!</span></p>
+        <h1 class="saludo__nombre">Soy<span class="bold"> Joshua Torres</span></h1>
+        <h2 class="saludo__cargo">Desarrollador Front End</h2>
+      </section>
+    </header>
+    <section id="main-section">
+      <section id="cont-boxes"><a href="http://seguristore.cl/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="http://physiolift-avene.cl/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="trabajos/felizconmiredcompra/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajos</span></div>
+          </figure></a><a href="trabajos/mjo/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajos</span></div>
+          </figure></a><a href="trabajos/kenwood/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="trabajos/fdv/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="trabajos/umayor/repo/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajos</span></div>
+          </figure></a><a href="trabajos/umayor/lgenerica/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="trabajos/finning" target="_blank">
+          <figure>
+            <div><span>Ver Trabajos</span></div>
+          </figure></a><a href="trabajos/marsol/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="trabajos/holos/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="trabajos/tdf/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="trabajos/entel/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="trabajos/hf/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a><a href="trabajos/apicola/" target="_blank">
+          <figure>
+            <div><span>Ver Trabajo</span></div>
+          </figure></a></section>
+    </section>
+    <footer class="footer">
+      <address class="correo bubble bubbleBig"><span>hola@joshua.cl</span></address>
+    </footer>
+  </body>
+</html>
