Implementacion del favicon

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,13 @@
     <meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI">
     <meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End">
     <title>Joshua Torres - Desarrollador Front End</title>
-    <link rel="shortcut icon" href="img/favicon.ico?v=2">
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.joshua.cl/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.joshua.cl/apple-touch-icon-152x152.png">
+    <link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-16x16.png" sizes="16x16">
+    <meta name="application-name" content="Joshua Torres - Desarrollador Front End">
+    <meta name="msapplication-TileColor" content="##495AF">
+    <meta name="msapplication-TileImage" content="http://www.joshua.cl/mstile-144x144.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:700">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
