Creacion de los logos y bloques que muestran los trabajos

--- a/public/index.html
+++ b/public/index.html
@@ -29,53 +29,20 @@
         <h2 class="saludo__cargo">Desarrollador Front End</h2>
       </section>
     </header>
-    <section id="main-section">
-      <section id="cont-boxes"><a href="http://seguristore.cl/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="http://physiolift-avene.cl/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="trabajos/felizconmiredcompra/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajos</span></div>
-          </figure></a><a href="trabajos/mjo/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajos</span></div>
-          </figure></a><a href="trabajos/kenwood/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="trabajos/fdv/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="trabajos/umayor/repo/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajos</span></div>
-          </figure></a><a href="trabajos/umayor/lgenerica/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="trabajos/finning" target="_blank">
-          <figure>
-            <div><span>Ver Trabajos</span></div>
-          </figure></a><a href="trabajos/marsol/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="trabajos/holos/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="trabajos/tdf/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="trabajos/entel/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="trabajos/hf/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a><a href="trabajos/apicola/" target="_blank">
-          <figure>
-            <div><span>Ver Trabajo</span></div>
-          </figure></a></section>
+    <section class="main-section">
+      <section class="cont-boxes"><a href="http://seguristore.cl/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/seguristore.png" alt="Seguristore" width="300" height="300"></div></a><a href="http://physiolift-avene.cl/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/physiolift.png" alt="Avene Physiolift" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/solares/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/solares.png" alt="Avene Solares" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/bci-cib/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/bci.png" alt="Bci" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/felizconmiredcompra/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/redcompra.png" alt="Feliz Red Compra Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/mjo/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/mjo.png" alt="Manuel Jose Osandon Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/kenwood/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/kenwood.png" alt="Kenwood Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/fdv/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/fdv.png" alt="FDV" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/umayor/repo/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/postgrado_mayor.png" alt="UMayor" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/finning" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/finning.png" alt="Finning" width="300" height="300"></div></a><a href="http://marsol.cl/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/marsol.png" alt="Marsol" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/apicola/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/apicola.png" alt="Apicola Santa Adriana" width="300" height="300"></div></a></section>
     </section>
     <footer class="footer">
       <address class="correo bubble bubbleBig"><span>hola@joshua.cl</span></address>
