Creacion de la pagina interna de algunos trabajos

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
       <section class="cont-boxes"><a href="http://seguristore.cl/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/seguristore.png" alt="Seguristore" width="300" height="300"></div></a><a href="http://physiolift-avene.cl/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/physiolift.png" alt="Avene Physiolift" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/solares/" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/solares.png" alt="Avene Solares" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/bci-cib/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/solares.png" alt="Avene Solares" width="300" height="300"></div></a><a href="bci.html">
           <div class="box"><img class="box__img" src="img/logos/bci.png" alt="Bci" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/felizconmiredcompra/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/redcompra.png" alt="Feliz Red Compra Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/mjo/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/mjo.png" alt="Manuel Jose Osandon Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/kenwood/" target="_blank">
