--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI">
     <meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End">
-    <title>Joshua Torres - Desarrollador Front End</title>
+    <title>Portafolio Web de Joshua Torres - Desarrollador Front End</title>
     <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.joshua.cl/apple-touch-icon-144x144.png">
     <link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.joshua.cl/apple-touch-icon-152x152.png">
     <link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-32x32.png" sizes="32x32">
@@ -34,7 +34,7 @@
           <div class="box"><img class="box__img" src="img/logos/seguristore.png" alt="Seguristore" width="300" height="300"></div></a><a href="http://physiolift-avene.cl/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/physiolift.png" alt="Avene Physiolift" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/solares/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/solares.png" alt="Avene Solares" width="300" height="300"></div></a><a href="bci.html">
-          <div class="box"><img class="box__img" src="img/logos/bci.png" alt="Bci" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/felizconmiredcompra/" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/bci.png" alt="Bci" width="300" height="300"></div></a><a href="redcompra.html">
           <div class="box"><img class="box__img" src="img/logos/redcompra.png" alt="Feliz Red Compra Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/mjo/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/mjo.png" alt="Manuel Jose Osandon Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/kenwood/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/kenwood.png" alt="Kenwood Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/fdv/" target="_blank">
