Creacion paginas interiores Finning, Postgrado Mayor, Mjo

--- a/public/mjo.html
+++ b/public/mjo.html
@@ -25,19 +25,14 @@
     <header class="header">
       <section class="saludo saludo--cliente"><a href="index.html">
           <p class="saludo__hola bubble"><span>Inicio</span></p></a>
-        <h1 class="saludo__nombre"><span class="bold"> Bci CIB</span></h1>
+        <h1 class="saludo__nombre"><span class="bold"> Mjo</span></h1>
       </section>
     </header>
     <section class="main-section">
-      <p class="infoCliente">Widgets realizados para la pagina<a class="infoCliente__link" href="https://www.bci.cl/cib" target="_blank">CIB</a> de BCI implementada en CMS Modyo, trabajo para agencia<a class="infoCliente__link" href="http://love.cl/" target="_blank">Love</a></p>
-      <section class="cont-boxes"><a href="http://www.joshua.cl/trabajos/bci-cib/credenciales/" target="_blank">
-          <div class="box box-txt">Credenciales</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/menu/" target="_blank">
-          <div class="box box-txt">Menu</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/modelo-negocios/" target="_blank">
-          <div class="box box-txt">Modelo de Negocios</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/nuestro-equipo/" target="_blank">
-          <div class="box box-txt">Nuestro Equipo</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/opinion-expertos/" target="_blank">
-          <div class="box box-txt">Opinion de Expertos</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/prensa/" target="_blank">
-          <div class="box box-txt">Prensa</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/soluciones/" target="_blank">
-          <div class="box box-txt">Soluciones</div></a></section>
+      <p class="infoCliente">Banners hechos con<a class="infoCliente__link" href="https://www.google.com/webdesigner/" target="_blank">Google Web Designer</a> y landing de Campaña para ex candidato presidencial, trabajo para agencia<a class="infoCliente__link" href="http://www.divanchile.com/" target="_blank">Divan</a></p>
+      <section class="cont-boxes"><a href="http://www.joshua.cl/trabajos/mjo/banners/files" target="_blank">
+          <div class="box box-txt">Banners</div></a><a href="http://www.joshua.cl/trabajos/mjo/landing/" target="_blank">
+          <div class="box box-txt">Landing</div></a></section>
     </section>
     <footer class="footer">
       <address class="correo bubble bubbleBig"><span>hola@joshua.cl</span></address>
