--- a/public/finning.html
+++ b/public/finning.html
@@ -25,19 +25,23 @@
     <header class="header">
       <section class="saludo saludo--cliente"><a href="index.html">
           <p class="saludo__hola bubble"><span>Inicio</span></p></a>
-        <h1 class="saludo__nombre"><span class="bold"> Bci CIB</span></h1>
+        <h1 class="saludo__nombre"><span class="bold"> Finning Cat</span></h1>
       </section>
     </header>
     <section class="main-section">
-      <p class="infoCliente">Widgets realizados para la pagina<a class="infoCliente__link" href="https://www.bci.cl/cib" target="_blank">CIB</a> de BCI implementada en CMS Modyo, trabajo para agencia<a class="infoCliente__link" href="http://love.cl/" target="_blank">Love</a></p>
-      <section class="cont-boxes"><a href="http://www.joshua.cl/trabajos/bci-cib/credenciales/" target="_blank">
-          <div class="box box-txt">Credenciales</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/menu/" target="_blank">
-          <div class="box box-txt">Menu</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/modelo-negocios/" target="_blank">
-          <div class="box box-txt">Modelo de Negocios</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/nuestro-equipo/" target="_blank">
-          <div class="box box-txt">Nuestro Equipo</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/opinion-expertos/" target="_blank">
-          <div class="box box-txt">Opinion de Expertos</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/prensa/" target="_blank">
-          <div class="box box-txt">Prensa</div></a><a href="http://www.joshua.cl/trabajos/bci-cib/soluciones/" target="_blank">
-          <div class="box box-txt">Soluciones</div></a></section>
+      <p class="infoCliente">Landings promocionales de Finning Cat, trabajo para agencia<a class="infoCliente__link" href="http://www.divanchile.com/" target="_blank">Divan</a></p>
+      <section class="cont-boxes"><a href="http://www.joshua.cl/trabajos/finning/03.06.15%20Landing%20Horquilla/" target="_blank">
+          <div class="box box-txt">Horquilla</div></a><a href="http://www.joshua.cl/trabajos/finning/08.04.15%20Landing%20Finning%20-%20Refrigerantes/" target="_blank">
+          <div class="box box-txt">Refrigerantes</div></a><a href="http://www.joshua.cl/trabajos/finning/08.06.15%20Landing%20-%20Mailing%20Garantia%20Extendida/" target="_blank">
+          <div class="box box-txt">Garantia Extendida</div></a><a href="http://www.joshua.cl/trabajos/finning/10.04.15%20Landing%20Horquilla/" target="_blank">
+          <div class="box box-txt">Horquilla V2</div></a><a href="http://www.joshua.cl/trabajos/finning/10.06.15%20Landing%20-%20Mailing%20Cargadores/" target="_blank">
+          <div class="box box-txt">Cargadores</div></a><a href="http://www.joshua.cl/trabajos/finning/14.04.15%20Landing%20Oportunicat%20Mantenimiento/" target="_blank">
+          <div class="box box-txt">Mantenimiento</div></a><a href="http://www.joshua.cl/trabajos/finning/16.04.15%20Landing%20Promociones/" target="_blank">
+          <div class="box box-txt">Promociones</div></a><a href="http://www.joshua.cl/trabajos/finning/20.04.15%20Landing%20y%20mailing%20super%20oferta%20olympian/" target="_blank">
+          <div class="box box-txt">Oferta Olympian</div></a><a href="http://www.joshua.cl/trabajos/finning/21.04.15%20Landing%20Curso%20Fit/" target="_blank">
+          <div class="box box-txt">Curso Fit</div></a><a href="http://www.joshua.cl/trabajos/finning/24.04.15%20Landing%20Mailing%20Bateria/" target="_blank">
+          <div class="box box-txt">Bateria</div></a><a href="http://www.joshua.cl/trabajos/finning/31.07.15%20Landing%20Paving/" target="_blank">
+          <div class="box box-txt">Paving</div></a></section>
     </section>
     <footer class="footer">
       <address class="correo bubble bubbleBig"><span>hola@joshua.cl</span></address>
