Eliminando extension html en algunos enlaces para navegacion en produccion

--- a/public/finning.html
+++ b/public/finning.html
@@ -23,7 +23,7 @@
   <body class="body"><!--[if lt IE 10]>
     <p class="browserupgrade">Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo<strong><a href="http://browsehappy.com/"> AQUÍ</a></strong> para mejorar tu experiencia y seguridad.</p><![endif]-->
     <header class="header">
-      <section class="saludo saludo--cliente"><a href="index.html">
+      <section class="saludo saludo--cliente"><a href="http://www.joshua.cl/">
           <p class="saludo__hola bubble"><span>Inicio</span></p></a>
         <h1 class="saludo__nombre"><span class="bold"> Finning Cat</span></h1>
       </section>
