--- a/public/index.html
+++ b/public/index.html
@@ -33,11 +33,11 @@
       <section class="cont-boxes"><a href="http://seguristore.cl/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/seguristore.png" alt="Seguristore" width="300" height="300"></div></a><a href="http://physiolift-avene.cl/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/physiolift.png" alt="Avene Physiolift" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/solares/" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/solares.png" alt="Avene Solares" width="300" height="300"></div></a><a href="bci.html">
-          <div class="box"><img class="box__img" src="img/logos/bci.png" alt="Bci" width="300" height="300"></div></a><a href="redcompra.html">
-          <div class="box"><img class="box__img" src="img/logos/redcompra.png" alt="Feliz Red Compra Landing" width="300" height="300"></div></a><a href="mjo.html" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/mjo.png" alt="Manuel Jose Osandon Landing" width="300" height="300"></div></a><a href="postgrado_mayor.html">
-          <div class="box"><img class="box__img" src="img/logos/postgrado_mayor.png" alt="UMayor" width="300" height="300"></div></a><a href="finning.html">
+          <div class="box"><img class="box__img" src="img/logos/solares.png" alt="Avene Solares" width="300" height="300"></div></a><a href="bci">
+          <div class="box"><img class="box__img" src="img/logos/bci.png" alt="Bci" width="300" height="300"></div></a><a href="redcompra">
+          <div class="box"><img class="box__img" src="img/logos/redcompra.png" alt="Feliz Red Compra Landing" width="300" height="300"></div></a><a href="mjo" target="_blank">
+          <div class="box"><img class="box__img" src="img/logos/mjo.png" alt="Manuel Jose Osandon Landing" width="300" height="300"></div></a><a href="postgrado_mayor">
+          <div class="box"><img class="box__img" src="img/logos/postgrado_mayor.png" alt="UMayor" width="300" height="300"></div></a><a href="finning">
           <div class="box"><img class="box__img" src="img/logos/finning.png" alt="Finning" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/kenwood/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/kenwood.png" alt="Kenwood Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/fdv/" target="_blank">
           <div class="box"><img class="box__img" src="img/logos/fdv.png" alt="FDV" width="300" height="300"></div></a><a href="http://marsol.cl/" target="_blank">
