--- a/public/bci.html
+++ b/public/bci.html
@@ -40,7 +40,16 @@
           <div class="box box-txt">Soluciones</div></a></section>
     </section>
     <footer class="footer">
-      <address class="correo bubble bubbleBig"><span>hola@joshua.cl</span></address>
+      <address class="correo bubble bubbleBig"><span>hola@joshua.cl</span>
+        <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+          ga('create', 'UA-74295870-1', 'auto');
+          ga('send', 'pageview');
+        </script>
+      </address>
     </footer>
   </body>
 </html>
