Optimizaciones para PageSpeed Insights

--- a/public/index.html
+++ b/public/index.html
@@ -1,60 +1,6 @@
-<!DOCTYPE html>
-<html class="no-js" lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI">
-    <meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End">
-    <title>Portafolio Web de Joshua Torres - Desarrollador Front End</title>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.joshua.cl/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.joshua.cl/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-16x16.png" sizes="16x16">
-    <meta name="application-name" content="Joshua Torres - Desarrollador Front End">
-    <meta name="msapplication-TileColor" content="##495AF">
-    <meta name="msapplication-TileImage" content="http://www.joshua.cl/mstile-144x144.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:700">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/styles.css"><!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  </head>
-  <body class="body"><!--[if lt IE 10]>
-    <p class="browserupgrade">Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo<strong><a href="http://browsehappy.com/"> AQUÍ</a></strong> para mejorar tu experiencia y seguridad.</p><![endif]-->
-    <header class="header">
-      <section class="saludo">
-        <p class="saludo__hola bubble"><span>¡Hola!</span></p>
-        <h1 class="saludo__nombre">Soy<span class="bold"> Joshua Torres</span></h1>
-        <h2 class="saludo__cargo">Desarrollador Front End</h2>
-      </section>
-    </header>
-    <section class="main-section">
-      <section class="cont-boxes"><a href="http://seguristore.cl/" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/seguristore.png" alt="Seguristore" width="300" height="300"></div></a><a href="http://physiolift-avene.cl/" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/physiolift.png" alt="Avene Physiolift" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/solares/" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/solares.png" alt="Avene Solares" width="300" height="300"></div></a><a href="bci">
-          <div class="box"><img class="box__img" src="img/logos/bci.png" alt="Bci" width="300" height="300"></div></a><a href="redcompra">
-          <div class="box"><img class="box__img" src="img/logos/redcompra.png" alt="Feliz Red Compra Landing" width="300" height="300"></div></a><a href="mjo" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/mjo.png" alt="Manuel Jose Osandon Landing" width="300" height="300"></div></a><a href="postgrado_mayor">
-          <div class="box"><img class="box__img" src="img/logos/postgrado_mayor.png" alt="UMayor" width="300" height="300"></div></a><a href="finning">
-          <div class="box"><img class="box__img" src="img/logos/finning.png" alt="Finning" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/kenwood/" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/kenwood.png" alt="Kenwood Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/fdv/" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/fdv.png" alt="FDV" width="300" height="300"></div></a><a href="http://marsol.cl/" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/marsol.png" alt="Marsol" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/apicola/" target="_blank">
-          <div class="box"><img class="box__img" src="img/logos/apicola.png" alt="Apicola Santa Adriana" width="300" height="300"></div></a></section>
-    </section>
-    <footer class="footer">
-      <address class="correo bubble bubbleBig"><span>hola@joshua.cl</span>
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-74295870-1', 'auto');
-          ga('send', 'pageview');
-        </script>
-      </address>
-    </footer>
-  </body>
-</html>
+<!DOCTYPE html><html class="no-js" lang="es"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI"><meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End"><title>Portafolio Web de Joshua Torres - Desarrollador Front End</title><link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.joshua.cl/apple-touch-icon-144x144.png"><link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.joshua.cl/apple-touch-icon-152x152.png"><link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-32x32.png" sizes="32x32"><link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-16x16.png" sizes="16x16"><meta name="application-name" content="Joshua Torres - Desarrollador Front End"><meta name="msapplication-TileColor" content="##495AF"><meta name="msapplication-TileImage" content="http://www.joshua.cl/mstile-144x144.png"><link rel="stylesheet" href="css/styles.css"><!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script><script>WebFont.load({google: {families: ['Josefin Sans: 300,400,600']}});</script></head><body class="body"><!--[if lt IE 10]><p class="browserupgrade">Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo<strong><a href="http://browsehappy.com/"> AQUÍ</a></strong> para mejorar tu experiencia y seguridad.</p><![endif]--><header class="header"><section class="saludo"><p class="saludo__hola bubble"><span>¡Hola!</span></p><h1 class="saludo__nombre">Soy<span class="bold"> Joshua Torres</span></h1><h2 class="saludo__cargo">Desarrollador Front End</h2></section></header><section class="main-section"><section class="cont-boxes"><a href="http://seguristore.cl/" target="_blank"><div class="box"><img class="box__img" src="img/logos/seguristore.png" alt="Seguristore" width="300" height="300"></div></a><a href="http://physiolift-avene.cl/" target="_blank"><div class="box"><img class="box__img" src="img/logos/physiolift.png" alt="Avene Physiolift" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/solares/" target="_blank"><div class="box"><img class="box__img" src="img/logos/solares.png" alt="Avene Solares" width="300" height="300"></div></a><a href="bci"><div class="box"><img class="box__img" src="img/logos/bci.png" alt="Bci" width="300" height="300"></div></a><a href="redcompra"><div class="box"><img class="box__img" src="img/logos/redcompra.png" alt="Feliz Red Compra Landing" width="300" height="300"></div></a><a href="mjo" target="_blank"><div class="box"><img class="box__img" src="img/logos/mjo.png" alt="Manuel Jose Osandon Landing" width="300" height="300"></div></a><a href="postgrado_mayor"><div class="box"><img class="box__img" src="img/logos/postgrado_mayor.png" alt="UMayor" width="300" height="300"></div></a><a href="finning"><div class="box"><img class="box__img" src="img/logos/finning.png" alt="Finning" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/kenwood/" target="_blank"><div class="box"><img class="box__img" src="img/logos/kenwood.png" alt="Kenwood Landing" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/fdv/" target="_blank"><div class="box"><img class="box__img" src="img/logos/fdv.png" alt="FDV" width="300" height="300"></div></a><a href="http://marsol.cl/" target="_blank"><div class="box"><img class="box__img" src="img/logos/marsol.png" alt="Marsol" width="300" height="300"></div></a><a href="http://www.joshua.cl/trabajos/apicola/" target="_blank"><div class="box"><img class="box__img" src="img/logos/apicola.png" alt="Apicola Santa Adriana" width="300" height="300"></div></a></section></section><footer class="footer"><address class="correo bubble bubbleBig"><span>hola@joshua.cl</span><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-74295870-1', 'auto');
+ga('send', 'pageview');</script></address></footer></body></html>
