--- a/public/postgrado_mayor.html
+++ b/public/postgrado_mayor.html
@@ -1,52 +1,6 @@
-<!DOCTYPE html>
-<html class="no-js" lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI">
-    <meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End">
-    <title>Portafolio Web de Joshua Torres - Desarrollador Front End</title>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.joshua.cl/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.joshua.cl/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-16x16.png" sizes="16x16">
-    <meta name="application-name" content="Joshua Torres - Desarrollador Front End">
-    <meta name="msapplication-TileColor" content="##495AF">
-    <meta name="msapplication-TileImage" content="http://www.joshua.cl/mstile-144x144.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:700">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/styles.css"><!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  </head>
-  <body class="body"><!--[if lt IE 10]>
-    <p class="browserupgrade">Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo<strong><a href="http://browsehappy.com/"> AQUÍ</a></strong> para mejorar tu experiencia y seguridad.</p><![endif]-->
-    <header class="header">
-      <section class="saludo saludo--cliente"><a href="http://www.joshua.cl/">
-          <p class="saludo__hola bubble"><span>Inicio</span></p></a>
-        <h1 class="saludo__nombre"><span class="bold"> Postgrado Mayor</span></h1>
-      </section>
-    </header>
-    <section class="main-section">
-      <p class="infoCliente">Banners hechos con<a class="infoCliente__link" href="https://www.google.com/webdesigner/" target="_blank">Google Web Designer,</a> mailings y landings de Campaña para ex candidato presidencial, trabajo para agencia<a class="infoCliente__link" href="http://www.divanchile.com/" target="_blank">Divan</a></p>
-      <section class="cont-boxes"><a href="http://www.joshua.cl/trabajos/umayor/repo/landing/" target="_blank">
-          <div class="box box-txt">Landing Nueva</div></a><a href="http://www.joshua.cl/trabajos/umayor/repo/mailing-list" target="_blank">
-          <div class="box box-txt">Mailings</div></a><a href="http://www.joshua.cl/trabajos/umayor/repo/banners-list" target="_blank">
-          <div class="box box-txt">Banners</div></a><a href="http://www.joshua.cl/trabajos/umayor/lgenerica/" target="_blank">
-          <div class="box box-txt">Landings antiguas</div></a></section>
-    </section>
-    <footer class="footer">
-      <address class="correo bubble bubbleBig"><span>hola@joshua.cl</span>
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-74295870-1', 'auto');
-          ga('send', 'pageview');
-        </script>
-      </address>
-    </footer>
-  </body>
-</html>
+<!DOCTYPE html><html class="no-js" lang="es"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI"><meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End"><title>Portafolio Web de Joshua Torres - Desarrollador Front End</title><link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.joshua.cl/apple-touch-icon-144x144.png"><link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.joshua.cl/apple-touch-icon-152x152.png"><link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-32x32.png" sizes="32x32"><link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-16x16.png" sizes="16x16"><meta name="application-name" content="Joshua Torres - Desarrollador Front End"><meta name="msapplication-TileColor" content="##495AF"><meta name="msapplication-TileImage" content="http://www.joshua.cl/mstile-144x144.png"><link rel="stylesheet" href="css/styles.css"><!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script><script>WebFont.load({google: {families: ['Josefin Sans: 300,400,600']}});</script></head><body class="body"><!--[if lt IE 10]><p class="browserupgrade">Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo<strong><a href="http://browsehappy.com/"> AQUÍ</a></strong> para mejorar tu experiencia y seguridad.</p><![endif]--><header class="header"><section class="saludo saludo--cliente"><a href="http://www.joshua.cl/"><p class="saludo__hola bubble"><span>Inicio</span></p></a><h1 class="saludo__nombre"><span class="bold"> Postgrado Mayor</span></h1></section></header><section class="main-section"><p class="infoCliente">Banners hechos con<a class="infoCliente__link" href="https://www.google.com/webdesigner/" target="_blank">Google Web Designer,</a> mailings y landings de Campaña para ex candidato presidencial, trabajo para agencia<a class="infoCliente__link" href="http://www.divanchile.com/" target="_blank">Divan</a></p><section class="cont-boxes"><a href="http://www.joshua.cl/trabajos/umayor/repo/landing/" target="_blank"><div class="box box-txt">Landing Nueva</div></a><a href="http://www.joshua.cl/trabajos/umayor/repo/mailing-list" target="_blank"><div class="box box-txt">Mailings</div></a><a href="http://www.joshua.cl/trabajos/umayor/repo/banners-list" target="_blank"><div class="box box-txt">Banners</div></a><a href="http://www.joshua.cl/trabajos/umayor/lgenerica/" target="_blank"><div class="box box-txt">Landings antiguas</div></a></section></section><footer class="footer"><address class="correo bubble bubbleBig"><span>hola@joshua.cl</span><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-74295870-1', 'auto');
+ga('send', 'pageview');</script></address></footer></body></html>
