--- a/public/finning.html
+++ b/public/finning.html
@@ -1,59 +1,6 @@
-<!DOCTYPE html>
-<html class="no-js" lang="es">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI">
-    <meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End">
-    <title>Portafolio Web de Joshua Torres - Desarrollador Front End</title>
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.joshua.cl/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.joshua.cl/apple-touch-icon-152x152.png">
-    <link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-16x16.png" sizes="16x16">
-    <meta name="application-name" content="Joshua Torres - Desarrollador Front End">
-    <meta name="msapplication-TileColor" content="##495AF">
-    <meta name="msapplication-TileImage" content="http://www.joshua.cl/mstile-144x144.png">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:700">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
-    <link rel="stylesheet" href="css/styles.css"><!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
-  </head>
-  <body class="body"><!--[if lt IE 10]>
-    <p class="browserupgrade">Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo<strong><a href="http://browsehappy.com/"> AQUÍ</a></strong> para mejorar tu experiencia y seguridad.</p><![endif]-->
-    <header class="header">
-      <section class="saludo saludo--cliente"><a href="http://www.joshua.cl/">
-          <p class="saludo__hola bubble"><span>Inicio</span></p></a>
-        <h1 class="saludo__nombre"><span class="bold"> Finning Cat</span></h1>
-      </section>
-    </header>
-    <section class="main-section">
-      <p class="infoCliente">Landings promocionales de Finning Cat, trabajo para agencia<a class="infoCliente__link" href="http://www.divanchile.com/" target="_blank">Divan</a></p>
-      <section class="cont-boxes"><a href="http://www.joshua.cl/trabajos/finning/03.06.15%20Landing%20Horquilla/" target="_blank">
-          <div class="box box-txt">Horquilla</div></a><a href="http://www.joshua.cl/trabajos/finning/08.04.15%20Landing%20Finning%20-%20Refrigerantes/" target="_blank">
-          <div class="box box-txt">Refrigerantes</div></a><a href="http://www.joshua.cl/trabajos/finning/08.06.15%20Landing%20-%20Mailing%20Garantia%20Extendida/" target="_blank">
-          <div class="box box-txt">Garantia Extendida</div></a><a href="http://www.joshua.cl/trabajos/finning/10.04.15%20Landing%20Horquilla/" target="_blank">
-          <div class="box box-txt">Horquilla V2</div></a><a href="http://www.joshua.cl/trabajos/finning/10.06.15%20Landing%20-%20Mailing%20Cargadores/" target="_blank">
-          <div class="box box-txt">Cargadores</div></a><a href="http://www.joshua.cl/trabajos/finning/14.04.15%20Landing%20Oportunicat%20Mantenimiento/" target="_blank">
-          <div class="box box-txt">Mantenimiento</div></a><a href="http://www.joshua.cl/trabajos/finning/16.04.15%20Landing%20Promociones/" target="_blank">
-          <div class="box box-txt">Promociones</div></a><a href="http://www.joshua.cl/trabajos/finning/20.04.15%20Landing%20y%20mailing%20super%20oferta%20olympian/" target="_blank">
-          <div class="box box-txt">Oferta Olympian</div></a><a href="http://www.joshua.cl/trabajos/finning/21.04.15%20Landing%20Curso%20Fit/" target="_blank">
-          <div class="box box-txt">Curso Fit</div></a><a href="http://www.joshua.cl/trabajos/finning/24.04.15%20Landing%20Mailing%20Bateria/" target="_blank">
-          <div class="box box-txt">Bateria</div></a><a href="http://www.joshua.cl/trabajos/finning/31.07.15%20Landing%20Paving/" target="_blank">
-          <div class="box box-txt">Paving</div></a></section>
-    </section>
-    <footer class="footer">
-      <address class="correo bubble bubbleBig"><span>hola@joshua.cl</span>
-        <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-74295870-1', 'auto');
-          ga('send', 'pageview');
-        </script>
-      </address>
-    </footer>
-  </body>
-</html>
+<!DOCTYPE html><html class="no-js" lang="es"><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="google-site-verification" content="UIIkSyEaFUblF_dc1I8g1LTsBT-ihRuwOLAiO9OMNAI"><meta name="Description" content="Portafolio Web de Joshua Torres - Desarrollador Front End"><title>Portafolio Web de Joshua Torres - Desarrollador Front End</title><link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://www.joshua.cl/apple-touch-icon-144x144.png"><link rel="apple-touch-icon-precomposed" sizes="152x152" href="http://www.joshua.cl/apple-touch-icon-152x152.png"><link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-32x32.png" sizes="32x32"><link rel="icon" type="image/png" href="http://www.joshua.cl/favicon-16x16.png" sizes="16x16"><meta name="application-name" content="Joshua Torres - Desarrollador Front End"><meta name="msapplication-TileColor" content="##495AF"><meta name="msapplication-TileImage" content="http://www.joshua.cl/mstile-144x144.png"><link rel="stylesheet" href="css/styles.css"><!--[if lt IE 9]><script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]--><script src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script><script>WebFont.load({google: {families: ['Josefin Sans: 300,400,600']}});</script></head><body class="body"><!--[if lt IE 10]><p class="browserupgrade">Estas usando un navegador strong OBSOLETO E INSEGURO. Por favor actualizalo<strong><a href="http://browsehappy.com/"> AQUÍ</a></strong> para mejorar tu experiencia y seguridad.</p><![endif]--><header class="header"><section class="saludo saludo--cliente"><a href="http://www.joshua.cl/"><p class="saludo__hola bubble"><span>Inicio</span></p></a><h1 class="saludo__nombre"><span class="bold"> Finning Cat</span></h1></section></header><section class="main-section"><p class="infoCliente">Landings promocionales de Finning Cat, trabajo para agencia<a class="infoCliente__link" href="http://www.divanchile.com/" target="_blank">Divan</a></p><section class="cont-boxes"><a href="http://www.joshua.cl/trabajos/finning/03.06.15%20Landing%20Horquilla/" target="_blank"><div class="box box-txt">Horquilla</div></a><a href="http://www.joshua.cl/trabajos/finning/08.04.15%20Landing%20Finning%20-%20Refrigerantes/" target="_blank"><div class="box box-txt">Refrigerantes</div></a><a href="http://www.joshua.cl/trabajos/finning/08.06.15%20Landing%20-%20Mailing%20Garantia%20Extendida/" target="_blank"><div class="box box-txt">Garantia Extendida</div></a><a href="http://www.joshua.cl/trabajos/finning/10.04.15%20Landing%20Horquilla/" target="_blank"><div class="box box-txt">Horquilla V2</div></a><a href="http://www.joshua.cl/trabajos/finning/10.06.15%20Landing%20-%20Mailing%20Cargadores/" target="_blank"><div class="box box-txt">Cargadores</div></a><a href="http://www.joshua.cl/trabajos/finning/14.04.15%20Landing%20Oportunicat%20Mantenimiento/" target="_blank"><div class="box box-txt">Mantenimiento</div></a><a href="http://www.joshua.cl/trabajos/finning/16.04.15%20Landing%20Promociones/" target="_blank"><div class="box box-txt">Promociones</div></a><a href="http://www.joshua.cl/trabajos/finning/20.04.15%20Landing%20y%20mailing%20super%20oferta%20olympian/" target="_blank"><div class="box box-txt">Oferta Olympian</div></a><a href="http://www.joshua.cl/trabajos/finning/21.04.15%20Landing%20Curso%20Fit/" target="_blank"><div class="box box-txt">Curso Fit</div></a><a href="http://www.joshua.cl/trabajos/finning/24.04.15%20Landing%20Mailing%20Bateria/" target="_blank"><div class="box box-txt">Bateria</div></a><a href="http://www.joshua.cl/trabajos/finning/31.07.15%20Landing%20Paving/" target="_blank"><div class="box box-txt">Paving</div></a></section></section><footer class="footer"><address class="correo bubble bubbleBig"><span>hola@joshua.cl</span><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-74295870-1', 'auto');
+ga('send', 'pageview');</script></address></footer></body></html>
